--- a/index.html
+++ b/index.html
@@ -1,1 +1,314 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ghafira Anindya Pasha</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #fee7ec;
+      color: #333;
+      min-height: 100vh;
+    }
+
+    nav {
+      background: #fed0d9;
+      padding: 15px 30px;
+      margin: 70px auto 50px;
+      border-radius: 12px;
+      max-width: 1200px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    nav h1 {
+      font-size: 2em;
+      font-weight: 600;
+      color: #7494ec;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      font-weight: 700;
+      color: #a2b8f2;
+      padding: 8px 14px;
+      border-radius: 10px;
+      transition: 0.3s ease;
+    }
+
+    nav ul li a:hover,
+    nav ul li a.active {
+      background-color: #d1dbf9;
+      color: #000;
+    }
+
+    .section {
+      display: none;
+      padding: 50px 20px;
+      max-width: 1250px;
+      margin: auto;
+      align-items: center;
+      transition: opacity 0.5s ease;
+    }
+
+    .section.active {
+      display: block;
+    }
+
+    .profile-card {
+      background: #fed0d9;
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(10px);
+      text-align: center;
+    }
+
+    .profile-pic {
+      width: 130px;
+      height: 130px;
+      border-radius: 50%;
+      border: 4px solid #b4d8df;
+      object-fit: cover;
+      margin-bottom: 20px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    }
+
+    h2 {
+      font-size: 2rem;
+      color: #6488ea;
+      margin-bottom: 20px;
+    }
+
+    .section ul {
+      list-style: none;
+      padding: 0;
+      margin-top: 20px;
+    }
+
+    .section ul li {
+      margin: 10px 0;
+    }
+
+    .section ul li::before {
+      content: "✓ ";
+      color: #8cce91;
+      font-weight: bold;
+    }
+
+    .email-link {
+      color: #7494ec;
+      text-decoration: none;
+    }
+
+    .email-link:hover {
+      text-decoration: underline;
+    }
+
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+      flex-wrap: wrap;
+    }
+
+    .social-icons a img {
+      width: 40px;
+      height: 40px;
+      transition: transform 0.3s ease;
+    }
+
+    .social-icons a img:hover {
+      transform: scale(1.2);
+    }
+
+    .btn-back {
+      display: inline-block;
+      margin-top: 30px;
+      padding: 10px 20px;
+      background-color: #a2b8f2;
+      color: #fff;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+
+    .btn-back:hover {
+      background-color: #d9abef;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      nav ul {
+        justify-content: center;
+      }
+
+      .profile-card {
+        padding: 30px;
+      }
+
+      h2 {
+        font-size: 1.6rem;
+      }
+
+      .profile-pic {
+        width: 100px;
+        height: 100px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <nav>
+    <h1>Ghapirrrr</h1>
+    <ul>
+      <li><a href="#" class="active" onclick="showSection(event, 'profil')">Profil</a></li>
+      <li><a href="#" onclick="showSection(event, 'keahlian')">Keahlian</a></li>
+      <li><a href="#" onclick="showSection(event, 'pendidikan')">Pendidikan</a></li>
+      <li><a href="#" onclick="showSection(event, 'pengalaman')">Pengalaman</a></li>
+      <li><a href="#" onclick="showSection(event, 'kontak')">Kontak</a></li>
+      <li><a href="#" onclick="showSection(event, 'figma')">Project</a></li>
+    </ul>
+  </nav>
+
+  <div id="profil" class="section active">
+    <div class="profile-card">
+      <h2>Tentang Saya</h2>
+      <img src="gambar1.jpg" alt="Foto Ghafira" class="profile-pic" />
+      <p>Haii!!!</p>
+      <p>Saya Ghafira Anindya Pasha, seorang pelajar SMK Negeri 1 Bawang yang sedang menekuni bidang pengembangan web. Saya memiliki semangat belajar yang tinggi dan senang mengeksplorasi hal-hal baru, terutama yang berkaitan dengan teknologi dan kreativitas.</p>
+    </div>
+  </div>
+
+  <div id="keahlian" class="section">
+    <div class="profile-card">
+      <h2>Keahlian</h2>
+      <ul>
+        <li>HTML, CSS, JavaScript</li>
+        <li>Desain UI/UX menggunakan Figma</li>
+        <li>Pengembangan Web Responsif</li>
+        <li>Menyanyi</li>
+        <li>Memasak</li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="pendidikan" class="section">
+    <div class="profile-card">
+      <h2>Riwayat Pendidikan</h2>
+      <ul>
+        <li>SMK Negeri 1 Bawang - 2027</li>
+        <li>MTs Negeri 1 Banjarnegara - 2024</li>
+        <li>SD Negeri 2 Gumiwang - 2021</li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="pengalaman" class="section">
+    <div class="profile-card">
+      <h2>Pengalaman</h2>
+      <ul>
+        <li>Bendahara Karawitan SMK Negeri 1 Bawang</li>
+        <li>Ketua Band Ekstra MTs Negeri 1 Banjarnegara 2023-2024</li>
+        <li>Ketua Karya Ilmiah 2022-2024 MTs Negeri 1 Banjarnegara</li>
+        <li>Anggota English Club 2022-2023 MTs Negeri 1 Banjarnegara</li>
+      </ul>
+    </div>
+  </div>
+
+  <div id="kontak" class="section">
+    <div class="profile-card">
+      <h2>Kontak</h2>
+      <div class="social-icons">
+        <a href="mailto:ghafiraanindya89@gmail.com" target="_blank">
+          <img src="https://img.icons8.com/color/48/gmail-new.png" alt="Email">
+        </a>
+        <a href="https://www.instagram.com/ghapir.a" target="_blank">
+          <img src="https://img.icons8.com/color/48/instagram-new--v1.png" alt="Instagram">
+        </a>
+        <a href="https://www.tiktok.com/@ghapirrrr" target="_blank">
+          <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
+        </a>
+        <a href="https://wa.me/6281326486534" target="_blank">
+          <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
+        </a>
+        <a href="https://github.com/Ghafiraanindya" target="_blank">
+          <img src="https://img.icons8.com/ios-glyphs/48/000000/github.png" alt="GitHub">
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div id="figma" class="section">
+    <div class="profile-card">
+      <h2>Desain</h2>
+      <div class="social-icons">
+        <a href="#" onclick="showSection(event, 'figma-links')">
+          <img src="https://img.icons8.com/color/48/figma--v1.png" alt="Figma Icon" />
+        </a>
+      </div>
+        <p>Klik Disini 👆👆</p>
+    </div>
+  </div>
+
+  <div id="figma-links" class="section">
+    <div class="profile-card">
+      <h2>Project Asha</h2>
+      <ul>
+        <li>
+          <a href="https://www.figma.com/design/yNjkPkPdENTOkTp5f6RbD7/PSAS_Ghafira-Anindya-Pasha?node-id=0-1&p=f" target="_blank">
+            PSAS_Ghafira-Anindya-Pasha
+          </a>
+        </li>
+        <li>
+          <a href="https://www.figma.com/design/dFLPmTGXDzXsZpwBa6Apgh/Untitled?t=2QNXjBUAd2Ta39Lx-0" target="_blank">
+            Desain Figma Lainnya
+          </a>
+        </li>
+      </ul>
+      <a href="#" class="btn-back" onclick="showSection(event, 'figma')">← Kembali ke Menu Figma</a>
+    </div>
+  </div>
+
+  <script>
+    function showSection(event, id) {
+      event.preventDefault();
+      const sections = document.querySelectorAll('.section');
+      const links = document.querySelectorAll('nav a');
+      sections.forEach(sec => sec.classList.remove('active'));
+      links.forEach(link => link.classList.remove('active'));
+
+      document.getElementById(id).classList.add('active');
+      if (event.target.tagName === 'A') {
+        event.target.classList.add('active');
+      }
+    }
+  </script>
+
+</body>
+</html>
