--- a/index.html
+++ b/index.html
@@ -5,182 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ghafira Anindya Pasha</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fee7ec;
-      color: #333;
-      min-height: 100vh;
-    }
-
-    nav {
-      background: #fed0d9;
-      padding: 15px 30px;
-      margin: 70px auto 50px;
-      border-radius: 12px;
-      max-width: 1200px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    nav h1 {
-      font-size: 2em;
-      font-weight: 600;
-      color: #7494ec;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      font-weight: 700;
-      color: #a2b8f2;
-      padding: 8px 14px;
-      border-radius: 10px;
-      transition: 0.3s ease;
-    }
-
-    nav ul li a:hover,
-    nav ul li a.active {
-      background-color: #d1dbf9;
-      color: #000;
-    }
-
-    .section {
-      display: none;
-      padding: 50px 20px;
-      max-width: 1250px;
-      margin: auto;
-      align-items: center;
-      transition: opacity 0.5s ease;
-    }
-
-    .section.active {
-      display: block;
-    }
-
-    .profile-card {
-      background: #fed0d9;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(10px);
-      text-align: center;
-    }
-
-    .profile-pic {
-      width: 130px;
-      height: 130px;
-      border-radius: 50%;
-      border: 4px solid #b4d8df;
-      object-fit: cover;
-      margin-bottom: 20px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    }
-
-    h2 {
-      font-size: 2rem;
-      color: #6488ea;
-      margin-bottom: 20px;
-    }
-
-    .section ul {
-      list-style: none;
-      padding: 0;
-      margin-top: 20px;
-    }
-
-    .section ul li {
-      margin: 10px 0;
-    }
-
-    .section ul li::before {
-      content: "✓ ";
-      color: #8cce91;
-      font-weight: bold;
-    }
-
-    .email-link {
-      color: #7494ec;
-      text-decoration: none;
-    }
-
-    .email-link:hover {
-      text-decoration: underline;
-    }
-
-    .social-icons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-      flex-wrap: wrap;
-    }
-
-    .social-icons a img {
-      width: 40px;
-      height: 40px;
-      transition: transform 0.3s ease;
-    }
-
-    .social-icons a img:hover {
-      transform: scale(1.2);
-    }
-
-    .btn-back {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 10px 20px;
-      background-color: #a2b8f2;
-      color: #fff;
-      border-radius: 8px;
-      text-decoration: none;
-      transition: background 0.3s ease;
-    }
-
-    .btn-back:hover {
-      background-color: #d9abef;
-    }
-
-    @media (max-width: 768px) {
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      nav ul {
-        justify-content: center;
-      }
-
-      .profile-card {
-        padding: 30px;
-      }
-
-      h2 {
-        font-size: 1.6rem;
-      }
-
-      .profile-pic {
-        width: 100px;
-        height: 100px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
